# Resume_ats_analyser_openenv

./: Dockerfile  README.md  app.py  ats_checker.py  baseline.py  client.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  resume_env.py  scorer.py  skill_matcher.py  suggestion_engine.py
server/: app.py
