[project]
name = "resume-ats-analyser"
version = "0.1.0"
description = "Resume ATS analyser API"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "transformers",
    "torch==2.2.2",
    "python-multipart",
    "pydantic",
    "huggingface-hub",
    "openenv>=0.2.0"
]

[project.scripts]
server = "uvicorn inference:app --host 0.0.0.0 --port 7860"

[build-system]
requires = ["uv"]
build-backend = "uv.build"

[tool.uv]
dev-dependencies = []
