[project]
name = "resume-ats-analyser"
version = "0.1.0"
description = "Resume ATS analyser API"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "transformers",
    "torch==2.2.2",
    "python-multipart",
    "pydantic",
    "huggingface-hub",
    "openenv"
]

[project.scripts]
server = "inference:main"

[build-system]
requires = ["uv"]
build-backend = "uv.build"
